[package]
name = "raylib_sandbox"
version = "0.1.0"
authors = ["Aaron Winter <winter.aaron93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
raylib = "3.5.0"
parking_lot = "0.11.1"
bevy_ecs = "0.6"